RESOLVED FIXED41287
MediaPlayerPrivate::getSupportedTypes does not return "modern" MIME types
https://bugs.webkit.org/show_bug.cgi?id=41287
Summary MediaPlayerPrivate::getSupportedTypes does not return "modern" MIME types
Eric Carlson
Reported 2010-06-28 10:56:17 PDT
QTKit based MediaPlayerPrivate::getSupportedTypes only returns MIME types supported by classic QuickTime, it should also include all types available because QTMovieOpenForPlaybackAttribute is set when the movie is opened.
Attachments
proposed patch (1.90 KB, patch)
2010-06-28 11:41 PDT, Eric Carlson
sam: review+
Eric Carlson
Comment 1 2010-06-28 11:02:47 PDT
Eric Carlson
Comment 2 2010-06-28 11:41:38 PDT
Created attachment 59915 [details] proposed patch
Eric Carlson
Comment 3 2010-06-28 13:11:30 PDT
Note You need to log in before you can comment on or make changes to this bug.