2010-06-28  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Sam Weinig.

        MediaPlayerPrivate::getSupportedTypes does not return "modern" MIME types
        https://bugs.webkit.org/show_bug.cgi?id=41287
        <rdar://problem/8137402>

        No new test because getSupportedTypes is used privately by MediaPlayer.

        * platform/graphics/mac/MediaPlayerPrivateQTKit.mm:
        (WebCore::MediaPlayerPrivate::getSupportedTypes): Build hash set with both common and
        modern types.


Canonical link: https://commits.webkit.org/53010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62030 268f45cc-cd09-0410-ab3c-d52691b4dbfc